--- a/output/team.html
+++ b/output/team.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>My Dream Team</title>
+    <title>The A-Team</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -18,15 +18,28 @@
                 <div class="row justify-content-center">
                     
 <div class="card m-3 " style="width: 20rem;">
-    <div class="card-header text-white bg-primary">
+    <div class="card-header text-white bg-success">
         <h3>asdf</h3>
         <h5>Engineer</h5>
     </div>
-    <div class="card-body bg-light text-dark">
+    <div class="card-body bg-dark text-dark">
         <ul class="list-group">
             <li class="list-group-item" style="font-size: 14px;">ID: asdf</li>
             <li class="list-group-item" style="font-size: 14px;">Email: asdf</li>
-            <li class="list-group-item" style="font-size: 14px;">GitHub: asf</li>
+            <li class="list-group-item" style="font-size: 14px;">GitHub: asdf</li>
+        </ul>
+    </div>
+</div>
+<div class="card m-3 " style="width: 20rem;">
+    <div class="card-header text-white bg-danger">
+        <h3>asdf</h3>
+        <h5>Intern</h5>
+    </div>
+    <div class="card-body bg-dark text-dark">
+        <ul class="list-group">
+            <li class="list-group-item" style="font-size: 14px;">ID: asdf</li>
+            <li class="list-group-item" style="font-size: 14px;">Email: asdf</li>
+            <li class="list-group-item" style="font-size: 14px;">School: asdf</li>
         </ul>
     </div>
 </div>
@@ -37,48 +50,9 @@
     </div>
     <div class="card-body bg-light text-dark">
         <ul class="list-group">
-            <li class="list-group-item" style="font-size: 14px;">ID: asdf</li>
-            <li class="list-group-item" style="font-size: 14px;">Email: asf</li>
+            <li class="list-group-item" style="font-size: 14px;">ID: </li>
+            <li class="list-group-item" style="font-size: 14px;">Email: asdf</li>
             <li class="list-group-item" style="font-size: 14px;">Office Number: asdf</li>
-        </ul>
-    </div>
-</div>
-<div class="card m-3 " style="width: 20rem;">
-    <div class="card-header text-white bg-primary">
-        <h3>asdf</h3>
-        <h5>Intern</h5>
-    </div>
-    <div class="card-body bg-light text-dark">
-        <ul class="list-group">
-            <li class="list-group-item" style="font-size: 14px;">ID: asef</li>
-            <li class="list-group-item" style="font-size: 14px;">Email: asdf</li>
-            <li class="list-group-item" style="font-size: 14px;">School: asdf</li>
-        </ul>
-    </div>
-</div>
-<div class="card m-3 " style="width: 20rem;">
-    <div class="card-header text-white bg-primary">
-        <h3>asf</h3>
-        <h5>Engineer</h5>
-    </div>
-    <div class="card-body bg-light text-dark">
-        <ul class="list-group">
-            <li class="list-group-item" style="font-size: 14px;">ID: asdf</li>
-            <li class="list-group-item" style="font-size: 14px;">Email: asdf</li>
-            <li class="list-group-item" style="font-size: 14px;">GitHub: asf</li>
-        </ul>
-    </div>
-</div>
-<div class="card m-3 " style="width: 20rem;">
-    <div class="card-header text-white bg-primary">
-        <h3>asf</h3>
-        <h5>Engineer</h5>
-    </div>
-    <div class="card-body bg-light text-dark">
-        <ul class="list-group">
-            <li class="list-group-item" style="font-size: 14px;">ID: asdf</li>
-            <li class="list-group-item" style="font-size: 14px;">Email: asf</li>
-            <li class="list-group-item" style="font-size: 14px;">GitHub: asf</li>
         </ul>
     </div>
 </div>
