--- a/output/employee_summary.html
+++ b/output/employee_summary.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>The A-Team</title>
+    <title>Employee List</title>
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row" style="background-color: #e94754; height: 130px;">
-            <p class="mx-auto my-auto" style="font-size: 40px; color: #ffffff;">My Dream Team</p>
+        <div class="row" style="background-color: purple; height: 130px;">
+            <p class="mx-auto my-auto" style="font-size: 40px; color: #ffffff;">Employee Summary</p>
         </div>
         <div class="row mt-5">
             <div class="col-md-2"></div>
@@ -27,32 +27,6 @@
             <li class="list-group-item" style="font-size: 14px;">ID: asdf</li>
             <li class="list-group-item" style="font-size: 14px;">Email: asdf</li>
             <li class="list-group-item" style="font-size: 14px;">GitHub: asdf</li>
-        </ul>
-    </div>
-</div>
-<div class="card m-3 " style="width: 20rem;">
-    <div class="card-header text-white bg-danger">
-        <h3>asdf</h3>
-        <h5>Intern</h5>
-    </div>
-    <div class="card-body bg-dark text-dark">
-        <ul class="list-group">
-            <li class="list-group-item" style="font-size: 14px;">ID: asdf</li>
-            <li class="list-group-item" style="font-size: 14px;">Email: asdf</li>
-            <li class="list-group-item" style="font-size: 14px;">School: asdf</li>
-        </ul>
-    </div>
-</div>
-<div class="card m-3 " style="width: 20rem;">
-    <div class="card-header text-white bg-primary">
-        <h3>asdf</h3>
-        <h5>Manager</h5>
-    </div>
-    <div class="card-body bg-light text-dark">
-        <ul class="list-group">
-            <li class="list-group-item" style="font-size: 14px;">ID: </li>
-            <li class="list-group-item" style="font-size: 14px;">Email: asdf</li>
-            <li class="list-group-item" style="font-size: 14px;">Office Number: asdf</li>
         </ul>
     </div>
 </div>
