--- a/output/employee_summary.html
+++ b/output/employee_summary.html
@@ -12,27 +12,79 @@
         <div class="row" style="background-color: purple; height: 130px;">
             <p class="mx-auto my-auto" style="font-size: 40px; color: #ffffff;">Employee Summary</p>
         </div>
-        <div class="row mt-5">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
                 <div class="row justify-content-center">
                     
 <div class="card m-3 " style="width: 20rem;">
+    <div class="card-header text-white bg-primary">
+        <h3>Doug Pederson</h3>
+        <h5>Manager</h5>
+    </div>
+    <div class="card-body bg-light text-dark">
+        <ul class="list-group">
+            <li class="list-group-item" style="font-size: 14px;">ID: 14</li>
+            <li class="list-group-item" style="font-size: 14px;">Email: dougiefresh@eagles.com</li>
+            <li class="list-group-item" style="font-size: 14px;">Office Number: 215-NFC-EAST</li>
+        </ul>
+    </div>
+</div>
+<div class="card m-3 " style="width: 20rem;">
+    <div class="card-header text-white bg-primary">
+        <h3>Jim Schwartz</h3>
+        <h5>Manager</h5>
+    </div>
+    <div class="card-body bg-light text-dark">
+        <ul class="list-group">
+            <li class="list-group-item" style="font-size: 14px;">ID: 00</li>
+            <li class="list-group-item" style="font-size: 14px;">Email: gymsocks@eagles.com</li>
+            <li class="list-group-item" style="font-size: 14px;">Office Number: 215-DE-FENSE</li>
+        </ul>
+    </div>
+</div>
+<div class="card m-3 " style="width: 20rem;">
     <div class="card-header text-white bg-success">
-        <h3>asdf</h3>
+        <h3>Carson Wentz</h3>
         <h5>Engineer</h5>
     </div>
     <div class="card-body bg-dark text-dark">
         <ul class="list-group">
-            <li class="list-group-item" style="font-size: 14px;">ID: asdf</li>
-            <li class="list-group-item" style="font-size: 14px;">Email: asdf</li>
-            <li class="list-group-item" style="font-size: 14px;">GitHub: asdf</li>
+            <li class="list-group-item" style="font-size: 14px;">ID: 11</li>
+            <li class="list-group-item" style="font-size: 14px;">Email: fromwentzhecame@eagles.com</li>
+            <li class="list-group-item" style="font-size: 14px;">GitHub: NotFoles</li>
+        </ul>
+    </div>
+</div>
+<div class="card m-3 " style="width: 20rem;">
+    <div class="card-header text-white bg-success">
+        <h3>Fletcher Cox</h3>
+        <h5>Engineer</h5>
+    </div>
+    <div class="card-body bg-dark text-dark">
+        <ul class="list-group">
+            <li class="list-group-item" style="font-size: 14px;">ID: 91</li>
+            <li class="list-group-item" style="font-size: 14px;">Email: fletch@eagles.com</li>
+            <li class="list-group-item" style="font-size: 14px;">GitHub: trenchWarrior</li>
+        </ul>
+    </div>
+</div>
+<div class="card m-3 " style="width: 20rem;">
+    <div class="card-header text-white bg-danger">
+        <h3>Nate Sudfeld</h3>
+        <h5>Intern</h5>
+    </div>
+    <div class="card-body bg-dark text-dark">
+        <ul class="list-group">
+            <li class="list-group-item" style="font-size: 14px;">ID: 2</li>
+            <li class="list-group-item" style="font-size: 14px;">Email: studfeld@eagles.com</li>
+            <li class="list-group-item" style="font-size: 14px;">School: Penn LPS Coding Bootcamp</li>
         </ul>
     </div>
 </div>
                 </div>
             </div>
-            <div class="col-md-2"></div>
+            <div class="col-md-1"></div>
         </div>
     </div>
 </body>
